--- a/honey.css
+++ b/honey.css
@@ -133,8 +133,6 @@ h1 {
 	color: rgb(248, 246, 191);
 	text-align: center;
 	letter-spacing: 0.07em;
-	/*padding: 30pt 0 30pt 38%;*/
-	/*padding: 30pt 0;*/
 }
 .main_div {
 	background-image: url(background.png);
@@ -147,13 +145,19 @@ h1 {
 }
 .div_about_company {
 	width: 87.5%;
-	height: 500pt;
+	height: 400pt;
 	margin: 0 50pt;
 	background-color: black;
 }
-.img_bestsellers {
-	width: 300pt;
-	height: 300pt;
+.div_with_bcg_violet {
+	background-image: url(background.png);
+}
+.div_bigger {
+	height: 520pt;
+}
+.img_about_company {
+	width: 240pt;
+	height: 240pt;
 	border: solid 5px rgb(142, 91, 183);
 	border-radius: 10%;
 }
@@ -165,7 +169,7 @@ h1 {
 .h_img {
 	display: flex;
 	justify-content: center;
-	padding: 40pt 0;
+	padding: 30pt 0;
 }
 .div_about_company_div {
 	display: flex;
@@ -191,11 +195,20 @@ h1 {
 	border-radius: 50%;
 	border: solid 5px rgb(142, 91, 183);
 }
+.img_product_smaller{
+	width: 140pt;
+}
+.img_product_crem {
+	border: solid 5px rgb(248, 246, 191);
+}
 .product_card {
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
 	width: 30%;
+}
+.product_card_smaller {
+	width: 25%;
 }
 .products {
 	display: flex;
@@ -208,6 +221,17 @@ h1 {
 }
 .product_card:hover p{
 	color: rgb(142, 91, 183);
+}
+.product_card:hover p{
+	color: white;
+}
+.product_card:hover .img_product{
+	color: rgb(142, 91, 183);
+	border: solid 5px white;
+}
+.product_card:hover .img_product_crem{
+	color: white;
+	border: solid 5px rgb(142, 91, 183);
 }
 footer {
 	width: 87.5%;
@@ -232,8 +256,11 @@ th {
 .icon_footer {
 	width: 20pt;
 }
-
 .cave {
 	display: flex;
 	justify-content: space-between;
 }
+
+
+
+
