--- a/honey.css
+++ b/honey.css
@@ -54,7 +54,7 @@ a {
 	align-items: center;
 }
 .slider_img_big {
-	border: solid 5px white;
+	border: solid 5px rgb(248,246,190);
 	border-radius: 50%;
 	width: 300pt;
 	height: 300pt;
@@ -70,7 +70,7 @@ p {
 	width: 40%;
 }
 .slider_img_small {
-	border: solid 5px white;
+	border: solid 5px rgb(248,246,190);
 	border-radius: 50%;
 	width: 100pt;
 	margin: 10pt;
@@ -87,45 +87,6 @@ p {
 #slider_logo {
 	padding-left: 40pt;
 }
-#magnify {
-  display: none;
-  position: fixed;
-  max-width: 700px;
-  height: auto;
-  z-index: 9999;
-}
-#magnify img {
-  width: 100%;
-}
- #overlay {
-  display: none;
-  background: #000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0.5;
-  z-index: 9990;
-}
- #close-popup {
-  width: 30px;
-  height: 30px;
-  background: #FFFFFF;
-  border: 1px solid #AFAFAF;
-  border-radius: 15px;
-  cursor: pointer;
-  position: absolute;
-  top: 15px;
-  right: 15px;
-}
-#close-popup i {
-  width: 30px;
-  height: 30px;
-  background: url(https://codernote.ru/files/cross.png) no-repeat center center;
-  background-size: 16px 16px;
-  display: block;
-}
 h1 {
 	font-family: Book Antiqua;
 	font-size: 34pt;
@@ -141,7 +102,6 @@ h1 {
 	height: 500pt;
 	margin: 0 50pt;
 	display: flex;
-	/*align-items: center;*/
 }
 .div_about_company {
 	width: 87.5%;
@@ -177,7 +137,7 @@ h1 {
 	padding: 0 20pt;
 }
 .div_about_company_div p {
-	color: rgb(142, 91, 183);
+	color:white;
 	padding-left: 50pt;
 }
 .div_bestsellers{
@@ -267,5 +227,73 @@ th {
 	border-radius: 10%;
 }
 
+.img_box {
+	width: 80%;
+	border-radius: 15%;
+	border: solid 5px rgb(142, 91, 183);
+}
+.img_box_smaller{
+	width: 140pt;
+}
+.img_box_crem {
+	border: solid 5px rgb(248, 246, 191);
+}
+.box_card {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	width: 30%;
+}
 
+.hint{
+display: inline-block;
+position: relative;
+}
+
+.hint:hover::after{
+  	content: attr(data-title);
+  	width: 100%;
+  	height: 50%;
+  	position: absolute;
+  	left: 50%; right: 0px; bottom: -20%;
+  	z-index: 1;
+  	background-image: url(background_hint.png);
+  	background-repeat: no-repeat;
+  	background-size: contain;: 
+  	color: black;
+  	text-align: center;
+  	font-family: 'Monotype Corsiva';
+  	font-size: 15px;
+  	padding: 0px 0px;
+}
+
+
+.box_card_smaller {
+	width: 25%;
+}
+.box {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 30pt;
+}
+.box_card p {
+	text-align: center;
+	padding: 7pt 30pt 0 0;
+}
+.box_card:hover p{
+	color: rgb(142, 91, 183);
+}
+.box_card:hover p{
+	color: white;
+}
+.box_card:hover::after .img_box{
+	color: rgb(142, 91, 183);
+	border: solid 5px white;
+}
+
+}
+.box_card:hover .img_box_crem{
+	color: white;
+	border: solid 5px rgb(142, 91, 183);
+}
 
