--- a/honey.css
+++ b/honey.css
@@ -253,18 +253,20 @@ position: relative;
 .hint:hover::after{
   	content: attr(data-title);
   	width: 100%;
-  	height: 50%;
+  	height: 30%;
   	position: absolute;
-  	left: 50%; right: 0px; bottom: -20%;
+  	left: 20%; right: 0px; bottom: -20%;
   	z-index: 1;
   	background-image: url(background_hint.png);
   	background-repeat: no-repeat;
-  	background-size: contain;: 
+  	background-size: cover; 
   	color: black;
   	text-align: center;
   	font-family: 'Monotype Corsiva';
   	font-size: 15px;
   	padding: 0px 0px;
+	border-radius: 20pt;
+  	border: solid 3px white;
 }
 
 
